<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_view_main_dynamic_colour_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_main_colour_clear" />

    <EditText
        android:id="@+id/edit_text_main_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="304dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:singleLine="false"
        android:text="@string/text_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_main_colour_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="clearInputField"
        android:text="@string/button_clear_text"
        app:layout_constraintStart_toStartOf="@+id/button_main_red_colour_switch"
        app:layout_constraintTop_toBottomOf="@+id/button_main_red_colour_switch" />

    <Button
        android:id="@+id/button_main_blue_colour_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:onClick="setBlueText"
        android:text="@string/button_blue_switch"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_main_red_colour_switch"
        app:layout_constraintEnd_toStartOf="@+id/button_main_red_colour_switch"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_main_green_colour_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:onClick="setGreenText"
        android:text="@string/button_green_switch"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_main_red_colour_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_main_red_colour_switch" />

    <Button
        android:id="@+id/button_main_red_colour_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="3dp"
        android:onClick="setRedText"
        android:text="@string/button_red_switch"
        app:layout_constraintEnd_toStartOf="@+id/button_main_green_colour_switch"
        app:layout_constraintStart_toEndOf="@+id/button_main_blue_colour_switch"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_main_input" />
</androidx.constraintlayout.widget.ConstraintLayout>